--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,7 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Spawners.cs" />
+    <Compile Include="Assets\Scripts\EnemySpawners.cs" />
     <Reference Include="UnityEngine">
       <HintPath>D:/Unity/2019.4.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
